This commit adds utf-8 support
The strings are now stored as std::strings with utf-8 encoding.
Another set of strings is also stored which are transliterated to ascii.
For easy search implementation.

--- a/libdmp-library/src/CMakeLists.txt
+++ b/libdmp-library/src/CMakeLists.txt
@@ -7,13 +7,21 @@ file(GLOB dmp-library-headers ../include/*.hpp)
 
 add_library(dmp-library SHARED ${dmp-library-sources} ${dmp-library-headers})
 
-find_package(Boost COMPONENTS filesystem REQUIRED)
+find_package(Boost COMPONENTS filesystem regex REQUIRED)
 if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
     target_link_libraries(dmp-library ${Boost_LIBRARIES})
 endif(Boost_FOUND)
+
 find_package(TagLib REQUIRED)
 if(TAGLIB_FOUND)
     target_link_libraries(dmp-library ${TAGLIB_LIBRARIES})
 endif(TAGLIB_FOUND)
+
+find_package(ICU REQUIRED)
+if(ICU_FOUND)
+    include_directories(ICU_INCLUDE_DIRS)
+    file(GLOB ICU_LIBRARIES /usr/lib/x86_64-linux-gnu/libicu*.so)
+    target_link_libraries(dmp-library ${ICU_LIBRARIES})
+endif(ICU_FOUND)
 
