--- a/libdmp-library/tests/CMakeLists.txt
+++ b/libdmp-library/tests/CMakeLists.txt
@@ -6,3 +6,6 @@ target_link_libraries(test1 dmp-library)
 
 add_executable(test2 test2.cpp)
 target_link_libraries(test2 dmp-library)
+
+add_executable(test3 test3.cpp)
+target_link_libraries(test3 dmp-library)
