First cppfied versions of a StreamSender and StreamReceiver

--- a/dmp-client/CMakeLists.txt
+++ b/dmp-client/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_executable(dmp-client main.cpp)
+add_definitions("--std=c++11")
+
+add_executable(dmp-client main.cpp RTSPSender.hpp RTSPSender.cpp)
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")
 
