started working on boost socket and transmitting the libraries

--- a/dmp-client/CMakeLists.txt
+++ b/dmp-client/CMakeLists.txt
@@ -12,3 +12,8 @@ target_link_libraries(dmp-client ${LIVEMEDIA_LIBRARIES})
 
 find_package(LibDMP-library REQUIRED)
 include_directories(${LIBDMP-LIBRARY_INCLUDE_DIRS})
+target_link_libraries(dmp-client ${LIBDMP-LIBRARY_LIBRARIES})
+
+find_package(Boost COMPONENTS system serialization REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
+target_link_libraries(dmp-client ${Boost_LIBRARIES})
