--- a/libdmp-library/src/CMakeLists.txt
+++ b/libdmp-library/src/CMakeLists.txt
@@ -7,7 +7,7 @@ file(GLOB dmp-library-headers ../include/*.hpp)
 
 add_library(dmp-library SHARED ${dmp-library-sources} ${dmp-library-headers})
 
-find_package(Boost COMPONENTS filesystem regex REQUIRED)
+find_package(Boost COMPONENTS filesystem regex serialization REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 target_link_libraries(dmp-library ${Boost_LIBRARIES})
 
@@ -18,3 +18,6 @@ find_package(ICU REQUIRED)
 include_directories(ICU_INCLUDE_DIRS)
 target_link_libraries(dmp-library ${ICU_LIBRARIES})
 
+if("${CMAKE_SYSTEM}" MATCHES "Linux")
+	target_link_libraries(dmp-library -lprofiler)
+endif("${CMAKE_SYSTEM}" MATCHES "Linux")
