Adds the dmp-common component.
Adds Connection class that represents a tcp connection. Also adds
2 free functions that can either listen on a certain port and or connects
to a server.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 2.8)
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")
 
+add_definitions(--std=c++11)
+
 add_subdirectory(libdmp-library)
+add_subdirectory(libdmp-common)
 
 add_subdirectory(dmp-server)
 add_subdirectory(dmp-client)
