--- a/dmp-client/CMakeLists.txt
+++ b/dmp-client/CMakeLists.txt
@@ -2,10 +2,13 @@ cmake_minimum_required(VERSION 2.8)
 
 add_definitions("--std=c++11")
 
-add_executable(dmp-client main.cpp RTSPSender.hpp RTSPSender.cpp dmp_connection.hpp dmp_connection.cpp)
+add_executable(dmp-client main.cpp RTSPSender.hpp RTSPSender.cpp)
 
 include_directories(${CMAKE_SOURCE_DIR}/libdmp-library/include)
 target_link_libraries(dmp-client dmp-library)
+
+include_directories(${CMAKE_SOURCE_DIR}/libdmp-common)
+target_link_libraries(dmp-client dmp-common)
 
 find_package(LiveMedia REQUIRED)
 include_directories(${LIVEMEDIA_INCLUDE_DIRS})
