--- a/dmp-server/CMakeLists.txt
+++ b/dmp-server/CMakeLists.txt
@@ -7,6 +7,9 @@ add_executable(dmp-server main.cpp RTSPReceiver.hpp RTSPReceiver.cpp)
 include_directories(${CMAKE_SOURCE_DIR}/libdmp-library/include)
 target_link_libraries(dmp-server dmp-library)
 
+include_directories(${CMAKE_SOURCE_DIR}/libdmp-common)
+target_link_libraries(dmp-server dmp-common)
+
 find_package(LiveMedia REQUIRED)
 include_directories(${LIVEMEDIA_INCLUDE_DIRS})
 target_link_libraries(dmp-server ${LIVEMEDIA_LIBRARIES})
