Added generic message serialization capabilities.

--- a/libdmp-common/CMakeLists.txt
+++ b/libdmp-common/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-add_library(dmp-common SHARED connection.hpp connection.cpp accept.hpp accept.cpp connect.hpp connect.cpp)
+add_library(dmp-common SHARED connection.hpp connection.cpp accept.hpp accept.cpp connect.hpp connect.cpp message.hpp)
 
 find_package(Boost COMPONENTS system thread REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
