--- a/libdmp-library/src/CMakeLists.txt
+++ b/libdmp-library/src/CMakeLists.txt
@@ -18,6 +18,6 @@ find_package(ICU REQUIRED)
 include_directories(ICU_INCLUDE_DIRS)
 target_link_libraries(dmp-library ${ICU_LIBRARIES})
 
-if("${CMAKE_SYSTEM}" MATCHES "Linux")
-	target_link_libraries(dmp-library -lprofiler)
-endif("${CMAKE_SYSTEM}" MATCHES "Linux")
+#if("${CMAKE_SYSTEM}" MATCHES "Linux")
+	#target_link_libraries(dmp-library -lprofiler)
+#endif("${CMAKE_SYSTEM}" MATCHES "Linux")
