--- a/libdmp-library/CMakeLists.txt
+++ b/libdmp-library/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
+# Must be one to resolve issues with boost::thread linking (turn off to see the issues)
 set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
