Adds working search and index functionality

--- a/libdmp-common/CMakeLists.txt
+++ b/libdmp-common/CMakeLists.txt
@@ -1,6 +1,15 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-add_library(dmp-common SHARED connection.hpp connection.cpp accept.hpp accept.cpp connect.hpp connect.cpp message.hpp message_serializer.hpp)
+add_library(dmp-common SHARED
+								connection.hpp connection.cpp
+								accept.hpp accept.cpp
+								connect.hpp connect.cpp
+								message.hpp
+								message_serializer.hpp
+								message_callbacks.hpp
+)
+
+include_directories(../libdmp-library/include)
 
 find_package(Boost COMPONENTS system thread REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
