Switched from using Livemedia to GStreamer.
Also fixed a MXE build to create windows executables.
The process is harder to recreate than from source build with Linux
and we need to ship the ICU data dll with the program or find a way
to work with the .dat file which is the other solution.

--- a/dmp-client/CMakeLists.txt
+++ b/dmp-client/CMakeLists.txt
@@ -3,9 +3,13 @@ cmake_minimum_required(VERSION 2.8)
 add_definitions("--std=c++11")
 
 add_executable(dmp-client   main.cpp
-                            RTSPSender.hpp RTSPSender.cpp
                             dmp_client.hpp dmp_client.cpp
               )
+
+if(MINGW)
+	set(Boost_USE_STATIC_LIBS ON)
+	set(Boost_USE_STATIC_RUNTIME ON)
+endif(MINGW)
 
 include_directories(${CMAKE_SOURCE_DIR}/libdmp-library/include)
 target_link_libraries(dmp-client dmp-library)
@@ -13,10 +17,15 @@ target_link_libraries(dmp-client dmp-library)
 include_directories(${CMAKE_SOURCE_DIR}/libdmp-common)
 target_link_libraries(dmp-client dmp-common)
 
-find_package(LiveMedia REQUIRED)
-include_directories(SYSTEM ${LIVEMEDIA_INCLUDE_DIRS})
-target_link_libraries(dmp-client ${LIVEMEDIA_LIBRARIES})
-
 find_package(Boost COMPONENTS system serialization program_options REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 target_link_libraries(dmp-client ${Boost_LIBRARIES})
+
+find_package(GStreamer REQUIRED)
+include_directories(${GSTREAMER_INCLUDE_DIRS})
+target_link_libraries(dmp-server ${GTREAMER_LIBRARIES})
+
+if(MINGW)
+	add_definitions("-DBOOST_THREAD_USE_LIB=1")
+	target_link_libraries(dmp-client ws2_32 mswsock)
+endif(MINGW)
