--- a/dmp-server/CMakeLists.txt
+++ b/dmp-server/CMakeLists.txt
@@ -5,7 +5,6 @@ add_definitions("--std=c++11")
 add_executable(dmp-server main.cpp
 						  dmp_server.hpp dmp_server.cpp
 						  client_endpoint.hpp client_endpoint.cpp
-						  RTSPReceiver.hpp RTSPReceiver.cpp
 			  )
 
 include_directories(${CMAKE_SOURCE_DIR}/libdmp-library/include)
@@ -14,10 +13,18 @@ target_link_libraries(dmp-server dmp-library)
 include_directories(${CMAKE_SOURCE_DIR}/libdmp-common)
 target_link_libraries(dmp-server dmp-common)
 
-find_package(LiveMedia REQUIRED)
-include_directories(SYSTEM ${LIVEMEDIA_INCLUDE_DIRS})
-target_link_libraries(dmp-server ${LIVEMEDIA_LIBRARIES})
-
-find_package(Boost COMPONENTS system serialization REQUIRED)
+find_package(Boost COMPONENTS thread system serialization REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 target_link_libraries(dmp-server ${Boost_LIBRARIES})
+
+find_package(GLIB2 REQUIRED)
+include_directories(${GLIB2_INCLUDE_DIRS})
+
+find_package(GStreamer REQUIRED)
+include_directories(${GSTREAMER_INCLUDE_DIRS})
+target_link_libraries(dmp-server ${GTREAMER_LIBRARIES})
+
+if(MINGW)
+	add_definitions("-DBOOST_THREAD_USE_LIB=1")
+	target_link_libraries(dmp-server ws2_32 mswsock)
+endif(MINGW)
