--- a/libdmp-common/CMakeLists.txt
+++ b/libdmp-common/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-add_library(dmp-common SHARED
+set(dmp-common-sources
 								connection.hpp connection.cpp
 								accept.hpp accept.cpp
 								connect.hpp connect.cpp
@@ -9,10 +9,14 @@ add_library(dmp-common SHARED
 								message_callbacks.hpp
 )
 
+if(MINGW)
+	add_library(dmp-common STATIC ${dmp-common-sources})
+else(MINGW)
+	add_library(dmp-common SHARED ${dmp-common-sources})
+endif(MINGW)
+
 include_directories(../libdmp-library/include)
 
 find_package(Boost COMPONENTS system thread REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 target_link_libraries(dmp-common ${Boost_LIBRARIES})
-
-
