--- a/dmp-server/CMakeLists.txt
+++ b/dmp-server/CMakeLists.txt
@@ -3,9 +3,10 @@ cmake_minimum_required(VERSION 2.8)
 add_definitions("--std=c++11")
 
 add_executable(dmp-server main.cpp
-						  dmp_server.hpp dmp_server.cpp
-						  client_endpoint.hpp client_endpoint.cpp
-			  )
+                          dmp_server.hpp dmp_server.cpp
+                          dmp_radio.hpp dmp_radio.cpp
+                          client_endpoint.hpp client_endpoint.cpp
+)
 
 include_directories(${CMAKE_SOURCE_DIR}/libdmp-library/include)
 target_link_libraries(dmp-server dmp-library)
@@ -17,14 +18,20 @@ find_package(Boost COMPONENTS thread system serialization REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 target_link_libraries(dmp-server ${Boost_LIBRARIES})
 
-find_package(GLIB2 REQUIRED)
-include_directories(${GLIB2_INCLUDE_DIRS})
-
 find_package(GStreamer REQUIRED)
 include_directories(${GSTREAMER_INCLUDE_DIRS})
-target_link_libraries(dmp-server ${GTREAMER_LIBRARIES})
+include_directories(${GSTREAMER_BASE_INCLUDE_DIRS})
+target_link_libraries(dmp-server ${GSTREAMER_LIBRARIES} ${GSTREAMER_BASE_LIBRARIES})
+
+find_package(GLIB2 REQUIRED)
+include_directories(${GLIB2_INCLUDE_DIRS})
+target_link_libraries(dmp-server ${GLIB2_LIBRARIES})
+
+find_package(GObject REQUIRED)
+include_directories(${GOBJECT_INCLUDE_DIR})
+target_link_libraries(dmp-server ${GOBJECT_LIBRARIES})
 
 if(MINGW)
-	add_definitions("-DBOOST_THREAD_USE_LIB=1")
-	target_link_libraries(dmp-server ws2_32 mswsock)
+	add_definitions("-DBOOST_THREAD_USE_LIB=1 -mms-bitfields -DPCRE_STATIC")
+	target_link_libraries(dmp-server pthread ws2_32 mswsock ffi)
 endif(MINGW)
