Mega commit. Lots of different changes. List below
- Added index functionality to the gui.
- Added gui that can query clients and show results.
- cleaned up destruction of clients, gui and server to not crash on destruction.
- Added trackno to dmp_library::entry.
- Added the origin to the SearchResponse message.
- Added a boost::fusion dependant outputter that can write a fusion object to an ostream.
- Added generic callbacks class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,9 @@ else()
 endif()
 
 include(wubwubcmake/join.cmake)
-join("${warnings}" " " warnings -Wno-shadow)
+join("${warnings}" " " warnings)
 
-add_definitions(${warnings} -g3)
+add_definitions(${warnings} -g3 -Wno-shadow -Wno-switch-enum)
 
 add_subdirectory(libdmp-library)
 add_subdirectory(libdmp-common)
