Created 2 interface for the client and ui to talk to each other
Also moved synchronized client shutdown to a shutdown method in stead of the destructor.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ else()
         include(wubwubcmake/enable_cpp11.cmake)
 endif()
 
+include(wubwubcmake/address_sanitizer.cmake)
+
 include(wubwubcmake/join.cmake)
 join("${warnings}" " " warnings)
 
