--- a/dmp-server/CMakeLists.txt
+++ b/dmp-server/CMakeLists.txt
@@ -15,20 +15,19 @@ include_directories(${CMAKE_SOURCE_DIR}/libdmp-common)
 target_link_libraries(dmp-server dmp-common)
 
 find_package(Boost COMPONENTS thread system serialization REQUIRED)
-include_directories(${Boost_INCLUDE_DIRS})
+include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 target_link_libraries(dmp-server ${Boost_LIBRARIES})
 
 find_package(GStreamer REQUIRED)
-include_directories(${GSTREAMER_INCLUDE_DIRS})
-include_directories(${GSTREAMER_BASE_INCLUDE_DIRS})
-target_link_libraries(dmp-server ${GSTREAMER_LIBRARIES} ${GSTREAMER_BASE_LIBRARIES})
+include_directories(SYSTEM ${GSTREAMER_INCLUDE_DIRS})
+target_link_libraries(dmp-server ${GSTREAMER_LIBRARIES})
 
 find_package(GLIB2 REQUIRED)
-include_directories(${GLIB2_INCLUDE_DIRS})
+include_directories(SYSTEM ${GLIB2_INCLUDE_DIRS})
 target_link_libraries(dmp-server ${GLIB2_LIBRARIES})
 
 find_package(GObject REQUIRED)
-include_directories(${GOBJECT_INCLUDE_DIR})
+include_directories(SYSTEM ${GOBJECT_INCLUDE_DIR})
 target_link_libraries(dmp-server ${GOBJECT_LIBRARIES})
 
 if(MINGW)
