--- a/libdmp-common/CMakeLists.txt
+++ b/libdmp-common/CMakeLists.txt
@@ -21,17 +21,17 @@ endif(MINGW)
 include_directories(../libdmp-library/include)
 
 find_package(Boost COMPONENTS system thread REQUIRED)
-include_directories(${Boost_INCLUDE_DIRS})
+include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 target_link_libraries(dmp-common ${Boost_LIBRARIES})
 
 find_package(GStreamer REQUIRED)
-include_directories(${GSTREAMER_INCLUDE_DIRS})
+include_directories(SYSTEM ${GSTREAMER_INCLUDE_DIRS})
 target_link_libraries(dmp-common ${GSTREAMER_LIBRARIES})
 
 find_package(GLIB2 REQUIRED)
-include_directories(${GLIB2_INCLUDE_DIRS})
+include_directories(SYSTEM ${GLIB2_INCLUDE_DIRS})
 target_link_libraries(dmp-common ${GLIB2_LIBRARIES})
 
 find_package(GObject REQUIRED)
-include_directories(${GOBJECT_INCLUDE_DIR})
+include_directories(SYSTEM ${GOBJECT_INCLUDE_DIR})
 target_link_libraries(dmp-common ${GOBJECT_LIBRARIES})
