--- a/dmp-client/CMakeLists.txt
+++ b/dmp-client/CMakeLists.txt
@@ -36,16 +36,23 @@ my_qt5_wrap_ui(QtGeneratedHeaders
 
 qt5_wrap_cpp(QtGeneratedSources
                           dmp_client_gui.hpp
-                          search_result_model.hpp
+                          dmp_client_gui_search_bar.hpp
+                          dmp_client_gui_menu_bar.hpp
+                          dmp_client_gui_search_results.hpp
 )
 
 add_executable(dmp-client main.cpp
                           dmp_client.hpp dmp_client.cpp
                           dmp_sender.hpp dmp_sender.cpp
                           dmp_receiver.hpp dmp_receiver.cpp
-                          dmp_client_gui.hpp dmp_client_gui.cpp
                           search_result_model.hpp search_result_model.cpp
-                          ui_interface.hpp
+                          dmp_client_gui.hpp dmp_client_gui.cpp
+                          dmp_client_gui_search_bar.hpp dmp_client_gui_search_bar.cpp
+                          dmp_client_gui_menu_bar.hpp dmp_client_gui_menu_bar.cpp
+                          dmp_client_gui_search_results.hpp dmp_client_gui_search_results.cpp
+                          search_result_model_qt_adapter.hpp search_result_model_qt_adapter.cpp
+                          dmp_client_ui_controller_interface.hpp
+                          dmp_client_ui_delegate.hpp
                           dmp_client_interface.hpp
                           ${QtGeneratedHeaders} ${QtGeneratedSources}
 )
