Added a CMake option (on Linux only) to use google_perf_tools.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,10 @@ include(wubwubcmake/address_sanitizer.cmake)
 include(wubwubcmake/join.cmake)
 join("${warnings}" " " warnings)
 
+IF(UNIX AND NOT APPLE)
+    option(USE_GPERF "Enable Google performance tools." ON)
+ENDIF(UNIX AND NOT APPLE)
+
 add_definitions(${warnings} -g3 -Wno-shadow -Wno-switch-enum)
 
 add_subdirectory(libdmp-library)
