--- a/dmp-client/CMakeLists.txt
+++ b/dmp-client/CMakeLists.txt
@@ -31,35 +31,40 @@ add_definitions("--std=c++11")
 find_package(Qt5Widgets REQUIRED)
 
 my_qt5_wrap_ui(QtGeneratedHeaders
-                          dmp_client_gui.ui
+	dmp_client_gui.ui
 )
 
 qt5_wrap_cpp(QtGeneratedSources
-                          dmp_client_gui.hpp
-                          dmp_client_gui_search_bar.hpp
-                          dmp_client_gui_menu_bar.hpp
-                          dmp_client_gui_search_results.hpp
-                          dmp_client_gui_radio_list.hpp
+	dmp_client_gui.hpp
+	dmp_client_gui_search_bar.hpp
+	dmp_client_gui_menu_bar.hpp
+	dmp_client_gui_search_results.hpp
+	dmp_client_gui_radio_list.hpp
 )
 
-add_executable(dmp-client main.cpp
-                          dmp_client.hpp dmp_client.cpp
-                          dmp_sender.hpp dmp_sender.cpp
-                          dmp_receiver.hpp dmp_receiver.cpp
-                          search_result_model.hpp search_result_model.cpp
-                          search_result_model_qt_adapter.hpp search_result_model_qt_adapter.cpp
-                          search_bar_model.hpp search_bar_model.cpp
-                          search_bar_model_qt_adapter.hpp search_bar_model_qt_adapter.cpp
-                          dmp_client_gui.hpp dmp_client_gui.cpp
-                          dmp_client_gui_search_bar.hpp dmp_client_gui_search_bar.cpp
-                          dmp_client_gui_menu_bar.hpp dmp_client_gui_menu_bar.cpp
-                          dmp_client_gui_search_results.hpp dmp_client_gui_search_results.cpp
-                          dmp_client_gui_radio_list.hpp dmp_client_gui_radio_list.cpp
-                          dmp_client_ui_controller_interface.hpp
-                          dmp_client_ui_delegate.hpp
-                          dmp_client_interface.hpp
-                          ${QtGeneratedHeaders} ${QtGeneratedSources}
+set(DmpClientSources
+	main.cpp
+	dmp_client.hpp dmp_client.cpp
+	dmp_sender.hpp dmp_sender.cpp
+	dmp_receiver.hpp dmp_receiver.cpp
+	search_result_model.hpp search_result_model.cpp
+	search_result_model_qt_adapter.hpp search_result_model_qt_adapter.cpp
+	search_bar_model.hpp search_bar_model.cpp
+	search_bar_model_qt_adapter.hpp search_bar_model_qt_adapter.cpp
+	dmp_client_gui.hpp dmp_client_gui.cpp
+	dmp_client_gui_search_bar.hpp dmp_client_gui_search_bar.cpp
+	dmp_client_gui_menu_bar.hpp dmp_client_gui_menu_bar.cpp
+	dmp_client_gui_search_results.hpp dmp_client_gui_search_results.cpp
+	dmp_client_gui_radio_list.hpp dmp_client_gui_radio_list.cpp
+	dmp_client_ui_controller_interface.hpp
+	dmp_client_ui_delegate.hpp
+	dmp_client_interface.hpp
+	${QtGeneratedHeaders} ${QtGeneratedSources}
 )
+
+set(DmpClientResources resources.qrc)
+
+add_executable(dmp-client ${DmpClientSources} ${DmpClientResources})
 
 if(MINGW)
 	set(Boost_USE_STATIC_LIBS ON)
