Fixed the message handler static dispatch to correctly work with multiple clients.
Statefull functions are not the way to go, to easy to get wrong. Made
a struct that holds this specific state and gets destructed/constructed
with every new client/clientendpoint

--- a/libdmp-common/CMakeLists.txt
+++ b/libdmp-common/CMakeLists.txt
@@ -8,9 +8,9 @@ set(dmp-common-sources
 	message_outputter.hpp
 	message_serializer.hpp
 	message_callbacks.hpp
-	static_message_receiver_switch.hpp
 	gstreamer_util.hpp gstreamer_util.cpp
 	fusion_static_dispatch.hpp fusion_static_dispatch.cpp
+	message_switch.hpp
 	number_pool.hpp number_pool.cpp
 )
 
@@ -37,7 +37,6 @@ target_link_libraries(dmp-common ${GLIB2_LIBRARIES})
 find_package(GObject REQUIRED)
 include_directories(SYSTEM ${GOBJECT_INCLUDE_DIR})
 target_link_libraries(dmp-common ${GOBJECT_LIBRARIES})
-
 
 if(USE_GPERF)
 	target_link_libraries(dmp-common "-lprofiler")
