Warning fixes, mostly signed vs unsigned fixes.
But appearantly the Qt5 cmake module system can still be circomvented. So I also added isystem to the cmake includes which in turn allows me to reenable the no default case in switch warning.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ IF(UNIX AND NOT APPLE)
     option(USE_GPERF "Enable Google performance tools." ON)
 ENDIF(UNIX AND NOT APPLE)
 
-add_definitions(${warnings} -g3 -Wno-shadow -Wno-switch-enum)
+add_definitions(${warnings} -g3 -Wno-shadow)
 
 add_subdirectory(libdmp-library)
 add_subdirectory(libdmp-common)
