--- a/qt-client/CMakeLists.txt
+++ b/qt-client/CMakeLists.txt
@@ -65,7 +65,7 @@ set(DmpClientSources
 	dmp_client_gui_search_results.hpp dmp_client_gui_search_results.cpp
 	dmp_client_gui_radio_list.hpp dmp_client_gui_radio_list.cpp
 	dmp_client_gui_playlists.hpp dmp_client_gui_playlists.cpp
-	boost_any_to_qvariant.hpp
+	boost_any_to_qvariant.hpp boost_any_to_qvariant.cpp
 	${QtGeneratedHeaders} ${QtGeneratedSources}
 )
 
