Changed model type to gui conversion.
Instead of using hard conversion to QString in QVariants the conversion is now handeled by a custom QStyledItemDelegate.

--- a/qt-client/CMakeLists.txt
+++ b/qt-client/CMakeLists.txt
@@ -50,6 +50,7 @@ qt5_wrap_cpp(QtGeneratedSources
 	dmp_client_gui_search_results.hpp
 	dmp_client_gui_radio_list.hpp
 	dmp_client_gui_playlists.hpp
+	gui_item_delegate.hpp
 )
 
 set(DmpClientSources
@@ -65,7 +66,8 @@ set(DmpClientSources
 	dmp_client_gui_search_results.hpp dmp_client_gui_search_results.cpp
 	dmp_client_gui_radio_list.hpp dmp_client_gui_radio_list.cpp
 	dmp_client_gui_playlists.hpp dmp_client_gui_playlists.cpp
-	boost_any_to_qvariant.hpp boost_any_to_qvariant.cpp
+	boost_any_to_qvariant.hpp
+	gui_item_delegate.hpp gui_item_delegate.cpp
 	${QtGeneratedHeaders} ${QtGeneratedSources}
 )
 
